--- a/template.html
+++ b/template.html
@@ -6,13 +6,13 @@
 <title>Placeholder</title>
 </head>
 <body>
-<header>
+    <header>
 
-</header>
-<main>
+    </header>
+    <main>
 
-</main>
-<footer>
+    </main>
+    <footer>
 
-</footer>    
-</body>w
+    </footer>    
+</body>
