Remise comment avant le test

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="template.css">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>Placeholder test vs</title>
+<title>Placeholder</title>
 </head>
 <body>
     <header>
